feat: add UI components including Skeleton, Slider, Sonner, Switch, Table, Tabs, Textarea, Toggle Group, Toggle, Tooltip, and utility functions
- Implemented Skeleton component for loading states.
- Added Slider component with customizable min, max, and value props.
- Integrated Sonner for toast notifications with theme support.
- Created Switch component for toggle functionality.
- Developed Table component with header, body, footer, and cell components.
- Introduced Tabs component for tabbed navigation.
- Added Textarea component for multi-line text input.
- Implemented Toggle Group and Toggle components for grouped toggle functionality.
- Created Tooltip component for displaying additional information on hover.
- Added utility functions for class name management and mobile detection.
- Included mock data and types for chat functionality.
- Set up main entry point and styles for the application.
- Configured Vite for development with React and Tailwind CSS.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,39 @@
 .env
 db/.env
+
+# Env files (keep examples)
+.env.*
+!.env.example
+!.env.*.example
+
+# macOS
+.DS_Store
+
+# Node
+node_modules/
+frontend/node_modules/
+dist/
+build/
+.vite/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Python
+.venv/
+__pycache__/
+*.py[cod]
+*.pyo
+.pytest_cache/
+.mypy_cache/
+.ruff_cache/
+.coverage
+htmlcov/
+
+# IDEs
+.idea/
+
+# Frontend
+frontend/.env
+frontend/node_modules/
